Make self-contained

--- a/Data_visualization/1_Introduction.qmd
+++ b/Data_visualization/1_Introduction.qmd
@@ -4,6 +4,7 @@ subtitle: "Introduction"
 author: "Elizabeth King and Kevin Middleton"
 format:
   revealjs:
+    self-contained: true
     footer: "Data visualization"
 ---
 
