--- a/Data_visualization/1_Introduction.qmd
+++ b/Data_visualization/1_Introduction.qmd
@@ -1,15 +1,17 @@
 ---
 title: "What do you want to say with your plot?"
 subtitle: "Introduction"
-author: "Elizabeth King and Kevin Middleton"
-affiliation: "Division of Biological Sciences"
+author:
+  - Elizabeth King
+  - Kevin Middleton
 format:
   revealjs:
     standalone: true
     footer: "Data visualization"
+    logo: QMLS_Logo.png
 ---
 
-## Overview
+## Module overview
 
 ## Module prerequisites
 
