--- a/Data_visualization/1.4-Ethics.qmd
+++ b/Data_visualization/1.4-Ethics.qmd
@@ -7,6 +7,7 @@ author:
 format:
   revealjs:
     standalone: true
+    self-contained: true
     footer: "Data visualization"
     logo: QMLS_Logo.png
     slide-number: true
