Weeks 1 and 2 updates

--- a/Data_visualization/1.2-Plot_styles.qmd
+++ b/Data_visualization/1.2-Plot_styles.qmd
@@ -5,6 +5,7 @@ author:
   - Kevin Middleton
 format:
   revealjs:
+    theme: [default, custom.scss]
     standalone: true
     self-contained: true
     logo: QMLS_Logo.png
