--- a/Data_visualization/2.4-Accessibility.qmd
+++ b/Data_visualization/2.4-Accessibility.qmd
@@ -5,6 +5,7 @@ author:
   - Kevin Middleton
 format:
   revealjs:
+    theme: [default, custom.scss]
     standalone: true
     self-contained: true
     logo: QMLS_Logo.png
