--- a/Data_visualization/2.4-Accessibility.qmd
+++ b/Data_visualization/2.4-Accessibility.qmd
@@ -27,7 +27,13 @@ format:
 
 ## Size considerations
 
+- [Size by area (default) or radius](https://ggplot2-book.org/scale-other.html)
+  - Humans are better at area
+- Set the `range` to control the output scale
+
 ## Linetype considerations
+
+
 
 ## Alpha considerations
 
